add post create page

--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,9 +15,8 @@
     "bootstrap": "3.3.4",
     "moment": "~2.10.2",
     "Entry.css": "https://github.com/zmmbreeze/Entry.css.git#~1.7.2",
-    "ember-localstorage-adapter": "~0.5.3"
-  },
-  "devDependencies": {
-    "js-cookie": "~1.5.1"
+    "js-cookie": "~1.5.1",
+    "ember-localstorage-adapter": "~0.5.3",
+    "simditor-2.1.9": "https://github.com/mycolorway/simditor/releases/download/v2.1.9/simditor-2.1.9.zip"
   }
 }
