--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -1,22 +1,16 @@
 {
   "name": "frontend",
   "dependencies": {
-    "ember": "1.11.1",
+    "ember": "1.12.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.0.0-beta.16.1",
+    "ember-data": "1.0.0-beta.19",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
-    "ember-qunit": "0.3.1",
+    "ember-qunit": "0.3.3",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.15",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "bootstrap": "3.3.4",
-    "moment": "~2.10.2",
-    "Entry.css": "https://github.com/zmmbreeze/Entry.css.git#~1.7.2",
-    "js-cookie": "~1.5.1",
-    "marked": "~0.3.3",
-    "At.js": "~1.2.0"
+    "qunit": "~1.17.1"
   }
 }
