--- a/backend/Rakefile
+++ b/backend/Rakefile
@@ -1,6 +1,6 @@
-# Rackfile
+require 'bundler/setup'
+require 'padrino-core/cli/rake'
 
-require "./app"
-require "sinatra/activerecord/rake"
-
-
+PadrinoTasks.use(:database)
+PadrinoTasks.use(:sequel)
+PadrinoTasks.init
