--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,12 +11,6 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0",
-    "bootstrap": "~3.3.5",
-    "moment": "~2.10.3",
-    "Entry.css": "https://github.com/zmmbreeze/Entry.css.git#~1.7.2",
-    "js-cookie": "~2.0.2",
-    "marked": "~0.3.3",
-    "At.js": "~1.3.2"
+    "qunit": "~1.18.0"
   }
 }
